# midsummer

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
midsummer/: __init__.py  midsummer.py
tests/: test_midsummer.py
