[tool.poetry]
name = "midsummer"
version = "0.1.0"
description = ""
authors = ["fredrik <nfredrik@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
assertpy = "^1.1"
pytest = "^8.1.1"

[[tool.poetry.source]]
name = "midsummer"
url = "https://github.com/nfredrik/midsummer.git"
priority = "primary"

[tool.pyright]
reportGeneralTypeIssues = false

[tool.poetry.group.dev.dependencies]
black = { extras = ["d"], version = "^23.12.0" }
pre-commit = "^3.6.0"
flake8 = "^6.1.0"
poethepoet = "^0.24.4"
flake8-pyproject = "^1.2.3"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
ignore = ["E203", "E266", "E501", "W503", "F403", "F401", "F811"]
max-line-length = 79
max-complexity = 18
select = ["B", "C", "E", "F", "W", "T4", "B9"]
exclude = [
    "__pycache__",
    ".venv",
    "venv"
]

[tool.poe.tasks]
test = "pytest"
format = "black ."
format-check = "black --check ."
lint = "flake8 ."
pre-commit = "pre-commit install"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
